feat: add validator

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^20.7.0",
     "@types/pg": "^8.10.3",
     "@types/sequelize": "^4.28.16",
+    "@types/validator": "^13.11.2",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
@@ -41,6 +42,7 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0",
+    "validator": "^13.11.0",
     "winston": "^3.10.0"
   }
 }
