--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^20.7.0",
     "@types/pg": "^8.10.3",
     "@types/sequelize": "^4.28.16",
+    "@types/supertest": "^2.0.13",
     "@types/validator": "^13.11.2",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
@@ -27,10 +28,13 @@
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.7.0",
+    "node-mocks-http": "^1.13.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.4",
     "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
@@ -38,7 +42,6 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jest": "^29.7.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0",
