--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.18",
     "@types/jest": "^29.5.5",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.7.0",
     "@types/pg": "^8.10.3",
     "@types/sequelize": "^4.28.16",
@@ -29,10 +30,8 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
-    "node-mocks-http": "^1.13.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
-    "rimraf": "^5.0.4",
     "sqlite3": "^5.1.6",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
@@ -42,6 +41,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0",
