--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.7.0",
+    "@types/node-cache": "^4.2.5",
     "@types/pg": "^8.10.3",
     "@types/sequelize": "^4.28.16",
     "@types/supertest": "^2.0.13",
@@ -44,6 +45,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "rimraf": "^5.0.5",
     "sequelize": "^6.33.0",
     "validator": "^13.11.0",
     "winston": "^3.10.0"
