--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.18",
     "@types/jest": "^29.5.5",
+    "@types/js-yaml": "^4.0.6",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.7.0",
     "@types/node-cache": "^4.2.5",
     "@types/pg": "^8.10.3",
     "@types/sequelize": "^4.28.16",
     "@types/supertest": "^2.0.13",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.4",
     "@types/validator": "^13.11.2",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
@@ -42,11 +45,14 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "rimraf": "^5.0.5",
     "sequelize": "^6.33.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "validator": "^13.11.0",
     "winston": "^3.10.0"
   }
