--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,9 @@ services:
   db:
     image: "postgres:latest"
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: charging-station
+      POSTGRES_USER: [username]
+      POSTGRES_PASSWORD: [password]
+      POSTGRES_DB: [db-name]
     volumes:
       - db_data:/var/lib/postgresql/data
 volumes:
