--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/index.js",
     "dev": "npx nodemon",
-    "test": "jest --detectOpenHandles --watchAll",
+    "test": "jest --detectOpenHandles --watchAll --coverage",
     "prettier-format": "prettier --config .prettierrc src/**/*.ts --write"
   },
   "keywords": [],
